Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -39,7 +39,7 @@
         "if Mount_Drive:\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
-        "        \n",
+        "\n",
         "%cd /content\n",
         "\n",
         "!apt -y update -qq\n",
@@ -58,8 +58,9 @@
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
+        "!git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git /content/stable-diffusion-webui/extensions/sd-webui-photopea-embed\n",
         "\n",
-        "#Extensions1.5 \n",
+        "#Extensions1.5\n",
         "!git clone https://huggingface.co/embed/negative /content/stable-diffusion-webui/embeddings/negative\n",
         "!git clone https://huggingface.co/embed/lora /content/stable-diffusion-webui/models/Lora/positive\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/embed/upscale/resolve/main/4x-UltraSharp.pth -d /content/stable-diffusion-webui/models/ESRGAN -o 4x-UltraSharp.pth\n",
@@ -146,9 +147,9 @@
         "    !git clone https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
         "    %cd /content/stable-diffusion-webui/\n",
         "    import json\n",
-        "    #日本語化 　\n",
-        "    data = {\"localization\": \"ja_JP\"} \n",
-        "    #関西弁化　\n",
+        "    #日本語化\n",
+        "    data = {\"localization\": \"ja_JP\"}\n",
+        "    #関西弁化\n",
         "   #data = {\"localization\": \"ks_JP\"}\n",
         "    with open(\"config.json\", \"w\") as f:\n",
         "        json.dump(data, f)\n"
@@ -291,7 +292,7 @@
         "    \"whitelady-V2\":[\"https://huggingface.co/karabee/whitelady-V2/resolve/main/white%20lady-V2.safetensors\"],\n",
         "    \"Wonton ColorBox Enhanced\":[\"https://civitai.com/api/download/models/30312\"],\n",
         "    \"X-mix\":[\"https://huggingface.co/les-chien/X-mix/resolve/main/X-mix-V1.0-pruned-fp16.safetensors\",\"https://huggingface.co/les-chien/X-mix/resolve/main/X-mix-V2.0-pruned-fp16.safetensors\",\"https://huggingface.co/les-chien/X-mix/resolve/main/X-mix-V2.5-pruned-fp16.safetensors\"],\n",
-        "    \"xtracolor.v11\":[\"https://huggingface.co/AIARTCHAN/xtracolor.v11/resolve/main/xtracolor.v11-fp16.safetensors\"],    \n",
+        "    \"xtracolor.v11\":[\"https://huggingface.co/AIARTCHAN/xtracolor.v11/resolve/main/xtracolor.v11-fp16.safetensors\"],\n",
         "    \"YuzuGinger\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuGinger_v1-pruned.safetensors\"],\n",
         "    \"YuzuLemonChaiLatte\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonChaiLatte_v3.5-pruned.safetensors\",\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonChaiLatte_v9.5-pruned.safetensors\"],\n",
         "    \"YuzuLemonMilk\":[\"https://huggingface.co/thiros/YuzuLemonTea/resolve/main/YuzuLemonMilk_v1.5-pruned.safetensors\"],\n",
@@ -299,9 +300,9 @@
         "}\n",
         "\n",
         "model_urls = model_dict.get(model_name)\n",
-        "for url in model_urls:   \n",
+        "for url in model_urls:\n",
         "    def install(url):\n",
-        "        base_name = os.path.basename(url)   \n",
+        "        base_name = os.path.basename(url)\n",
         "        if url.startswith(\"https://drive.google.com\"):\n",
         "            os.chdir(\"/content/stable-diffusion-webui/models/Stable-diffusion\")\n",
         "            !gdown --fuzzy {url}\n",
@@ -313,7 +314,7 @@
         "            !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}\n",
         "        else:\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {url}\n",
-        "                \n",
+        "\n",
         "    install(url)\n",
         "\n",
         "\n"
@@ -339,8 +340,8 @@
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/VAE -o {base_name} \n",
-        "    print(base_name)    \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/VAE -o {base_name}\n",
+        "    print(base_name)\n",
         "install(vae_url)\n"
       ],
       "metadata": {
@@ -371,7 +372,7 @@
         "def install(urls):\n",
         "    for url in urls:\n",
         "        extension_name = os.path.basename(url)\n",
-        "        print(extension_name)    \n",
+        "        print(extension_name)\n",
         "        !git clone {url} /content/stable-diffusion-webui/extensions/{base_name}\n",
         "\n",
         "install(extensions)"
@@ -404,7 +405,7 @@
         "    pretrained_model_1  = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
         "elif model_type == \"Easy_Prompt_Selector\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\"\n",
-        "    \n",
+        "\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
@@ -444,7 +445,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデル\n",
-        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
+        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
         "model_type_2 =\"Checkpoint\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "if model_type_2 == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -494,15 +495,15 @@
         "                    url = url.replace(\"/blob/\", \"/resolve/\")\n",
         "                huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "                user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name} \n",
+        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name}\n",
         "            else:\n",
         "                !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
-        "                \n",
+        "\n",
         "        install(modelUrl)\n",
         "\n",
         "elif modelUrl == \"\":\n",
         "  print(\"\")\n",
-        "  \n",
+        "\n",
         "else:\n",
         "    def install(url):\n",
         "        base_name = os.path.basename(url)\n",
@@ -514,7 +515,7 @@
         "            huggingface_token = \"\"  # @param {type:\"string\"}\n",
         "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "            if \"/blob/\" in url:\n",
-        "                url = url.replace(\"/blob/\", \"/resolve/\")          \n",
+        "                url = url.replace(\"/blob/\", \"/resolve/\")\n",
         "            if model_type_2 == \"VAE\":\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
@@ -523,9 +524,9 @@
         "            elif model_type_2 ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
-        "                    print(base_name)                \n",
+        "                    print(base_name)\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
-        "                \n",
+        "\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "\n",
         "        else:\n",
@@ -537,7 +538,7 @@
         "            elif model_type_2 ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
-        "                    print(base_name)                \n",
+        "                    print(base_name)\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
@@ -625,7 +626,7 @@
         "import os\n",
         "\n",
         "upload_download = \"Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
-        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
+        "folder_type = \"zip\" #@param [\"raw\",\"zip\"]\n",
         "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
         "if upload_download == \"Upload_drive\":\n",
