Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -51,6 +51,7 @@
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
+        "!git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git /content/stable-diffusion-webui/extensions/sd-webui-photopea-embed\n",
         "\n",
         "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
@@ -215,7 +216,7 @@
         "        !wget --no-check-certificate --header={user_header} {model_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{base_name}\n",
         "    else:\n",
         "        !wget {model_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{model_name}.safetensors\n",
-        " \n",
+        "\n",
         "install(model_url)\n"
       ]
     },
@@ -249,10 +250,10 @@
         "    elif vae_url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in vae_url:\n",
         "            vae_url = vae_url.replace(\"/blob/\", \"/resolve/\")\n",
-        "        huggingface_token = \"\" \n",
+        "        huggingface_token = \"\"\n",
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "        !wget {vae_url} -O /content/stable-diffusion-webui/models/VAE/{base_name}\n",
-        "    else: \n",
+        "    else:\n",
         "        !wget {vae_url} -O /content/stable-diffusion-webui/models/VAE/{base_name}\n",
         "\n",
         "install(vae_url)"
@@ -293,7 +294,7 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
-        " \n",
+        "\n",
         "if modelUrl == \"\":\n",
         "  print(\"modelUrlに値が指定されていないため、スキップされます。\")\n",
         "\n",
@@ -366,7 +367,7 @@
         "\t\"One_Piece_Wano_Style_LoRA\":\"https://civitai.com/api/download/models/6331\" ,\n",
         "\t\"Eula_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Eula/eulaMedium.safetensors\" ,\n",
         "\t\"Yelan_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yelan/Yelan_Hard.safetensors\" ,\n",
-        "\t\"Barbara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\", \n",
+        "\t\"Barbara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\",\n",
         "\t\"Diluc_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Diluc/Diluc_Mediumpruned.safetensors\" ,\n",
         "\t\"Mona_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Mona/Mona_mediumpruned.safetensors\" ,\n",
         "\t\"Ganyu_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Ganyu/Ganyu_Medium.safetensors\" ,\n",
@@ -387,17 +388,17 @@
         "\t\"Corneos_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
         "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\",\n",
         "\t\"Corneos_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
         "\t\"Corneos_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
         "\t\"Corneos_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
         "\t\"Corneos_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
         "\t\"Corneos_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
         "\t\"Corneos_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\",\n",
+        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\",\n",
         "\t\"Corneos_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\",\n",
         "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
@@ -415,7 +416,7 @@
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
         "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !wget {Lora_url} =O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{Lora_name}.safetensors     \n",
+        "        !wget {Lora_url} =O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{Lora_name}.safetensors\n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
         "        !wget {Textual_url} -O /content/stable-diffusion-webui/embeddings/{Textual_name}.pt\n",
@@ -439,7 +440,7 @@
         "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
-        "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae "
+        "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae"
       ],
       "metadata": {
         "id": "Pet8RD2Q6-4L",
