Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -148,7 +148,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"AniReality-Mix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo_7th_Heaven_Mix\",\"ChilloutMix\",\"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
+        "model_name =\"anything-v4.0\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo_7th_Heaven_Mix\",\"ChilloutMix\",\"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -156,8 +156,8 @@
         "    \"waifu_diffusion_v1.3\":\"https://huggingface.co/hakurei/waifu-diffusion-v1-3/resolve/main/wd-v1-3-float32.ckpt\",\n",
         "    \"Openjourney\":\"https://huggingface.co/prompthero/openjourney/resolve/main/mdjrny-v4.safetensors\",\n",
         "    \"anything-v3.0\":\"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp32-pruned.safetensors\",\n",
-        "    \"anything-v4.0\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\",\n",
-        "    \"anything-v4.5\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned.safetensors\",\n",
+        "    \"anything-v4.0\":\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\",\n",
+        "    \"anything-v4.5\":\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.5-pruned.safetensors\",\n",
         "    \"Counterfeit-V2.0\":\"https://huggingface.co/gsdf/Counterfeit-V2.0/resolve/main/Counterfeit-V2.0fp16.safetensors\",\n",
         "    \"Counterfeit-V2.5\":\"https://huggingface.co/gsdf/Counterfeit-V2.5/resolve/main/Counterfeit-V2.5_pruned.safetensors\",\n",
         "    \"8528-diffusion\":\"https://huggingface.co/852wa/8528-diffusion/resolve/main/8528d-final.ckpt\",\n",
