Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -43,7 +43,7 @@
         "!pip install -q xformers==0.0.19 triton==2.0.0 -U\n",
         "\n",
         "#WebUIのインストール\n",
-        "!git clone -b v2.1 https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
         "\n",
         "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
@@ -155,8 +155,8 @@
         "    \"waifu_diffusion_v1.3\":\"https://huggingface.co/hakurei/waifu-diffusion-v1-3/resolve/main/wd-v1-3-float32.ckpt\",\n",
         "    \"Openjourney\":\"https://huggingface.co/prompthero/openjourney/resolve/main/mdjrny-v4.safetensors\",\n",
         "    \"anything-v3.0\":\"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp32-pruned.safetensors\",\n",
-        "    \"anything-v4.0\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\",\n",
-        "    \"anything-v4.5\":\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned.safetensors\",\n",
+        "    \"anything-v4.0\":\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\",\n",
+        "    \"anything-v4.5\":\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.5-pruned.safetensors\",\n",
         "    \"Counterfeit-V2.0\":\"https://huggingface.co/gsdf/Counterfeit-V2.0/resolve/main/Counterfeit-V2.0fp16.safetensors\",\n",
         "    \"Counterfeit-V2.5\":\"https://huggingface.co/gsdf/Counterfeit-V2.5/resolve/main/Counterfeit-V2.5_pruned.safetensors\",\n",
         "    \"8528-diffusion\":\"https://huggingface.co/852wa/8528-diffusion/resolve/main/8528d-final.ckpt\",\n",
