Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -192,8 +192,8 @@
         "    \"anysium_anypas\":[\"https://huggingface.co/aioe/anysium_anypas/resolve/main/anypas-v1.0-fp16.safetensors\",\"https://huggingface.co/aioe/anysium_anypas/resolve/main/anysium-v1.0-fp16.safetensors\"],\n",
         "    \"Anything V5\":[\"https://civitai.com/api/download/models/30163\"],\n",
         "    \"anything-v3.0\":[\"https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/anything-v3-fp16-pruned.safetensors\"],\n",
-        "    \"anything-v4.0\":[\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.0-pruned-fp16.safetensors\"],\n",
-        "    \"AnythingV-4.5\":[\"https://huggingface.co/andite/anything-v4.0/resolve/main/anything-v4.5-pruned-fp16.ckpt\"],\n",
+        "    \"anything-v4.0\":[\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.0-pruned.ckpt\"],\n",
+        "    \"anything-v4.5\":[\"https://huggingface.co/ckpt/anything-v4.0/resolve/main/anything-v4.5-pruned.safetensors\"],\n",
         "    \"ariamix\":[\"https://huggingface.co/aria123/ariamix/resolve/main/aria%E8%87%AA%E8%9E%8D%E6%A8%A1%E5%9E%8BV1.0.ckpt\"],\n",
         "    \"Baka-Diffusion\":[\"https://huggingface.co/Hosioka/Baka-Diffusion/resolve/main/Baka-DiffusionV1(Fp16).safetensors\"],\n",
         "    \"BalorMix-V4\":[\"https://huggingface.co/ploughB660/BalorMix-V4/resolve/main/BalorMix-V4.1.safetensors\",\"https://huggingface.co/ploughB660/BalorMix-V4/resolve/main/BalorMix-V4.1featACT.safetensors\",\"https://huggingface.co/ploughB660/BalorMix-V4/resolve/main/BalorMix-V4.1featCfeitV2.5.safetensors\"],\n",
